<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>edu.fpt.AI1501</groupId>
  <artifactId>JTL002</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>JTL002</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>

    </dependency>

	  <dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.0</version>		
			<type>jar</type>
    </dependency>

    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.8.6</version>
      <scope>compile</scope>
    </dependency>

	<dependency>
		<groupId>commons-codec</groupId>
		<artifactId>commons-codec</artifactId>
		<version>1.11</version>
	</dependency>
	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
	

  </dependencies>
  
  
  
  

  <build>
    <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
		
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-shade-plugin</artifactId>
			<version>3.2.4</version>
			<executions>
			  <execution>
				<phase>package</phase>
				<goals>
				  <goal>shade</goal>
				</goals>
				<configuration>
				  <artifactSet>
					<excludes>
					  <exclude>junit:*</exclude>
					 
					</excludes>
				  </artifactSet>
				</configuration>
			  </execution>
			</executions>
		</plugin>
		
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
          <configuration>
            <release>14</release>
         </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.0.2</version>
            <configuration>
              <archive>
                <manifest>
                  <mainClass>edu.fpt.AI1501.App</mainClass>
                </manifest>
              </archive>
            </configuration>
        </plugin>
		<plugin>
			  <groupId>com.akathist.maven.plugins.launch4j</groupId>
			  <artifactId>launch4j-maven-plugin</artifactId>
			  <executions>
				<execution>
				  <id>l4j-clui</id>
				  <phase>package</phase>
				  <goals><goal>launch4j</goal></goals>
				  <configuration>
					<headerType>console</headerType>
					<outfile>target/${project.artifactId}.exe</outfile>
					<jar>target/${project.artifactId}-SNAPSHOT-1.0.jar</jar>
					<errTitle>${project.artifactId}</errTitle>
					<classPath>
					  <mainClass>edu.FPT.AI1501.App</mainClass>
					  <addDependencies>false</addDependencies>
					  <preCp>anything</preCp>
					</classPath>
					<jre>
					  <minVersion>1.5.0</minVersion>
					  <opts>
						<opt>-Djava.endorsed.dirs=./endorsed</opt>
					  </opts>
					</jre>
					<versionInfo>
					  <fileVersion>1.2.3.4</fileVersion>
					  <txtFileVersion>txt file version?</txtFileVersion>
					  <fileDescription>a description</fileDescription>
					  <copyright>my copyright</copyright>
					  <productVersion>4.3.2.1</productVersion>
					  <txtProductVersion>txt product version</txtProductVersion>
					  <productName>E-N-C-C</productName>
					  <internalName>ccne</internalName>
					  <originalFilename>original.exe</originalFilename>
					</versionInfo>
				  </configuration>
				</execution>
			  </executions>
			</plugin>
			<plugin>
			  <artifactId>maven-assembly-plugin</artifactId>
			  <executions>
				<execution>
				  <id>assembly</id>
				  <phase>package</phase>
				  <goals><goal>single</goal></goals>
				  <configuration>
					<descriptors>
					  <descriptor>assembly.xml</descriptor>
					</descriptors>
				  </configuration>
				</execution>
			  </executions>
			</plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
	
  </build>

</project>
